--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -5,14 +5,12 @@ After=network.target
 [Service]
 Type=simple
 User=__APP__
-Group=www-data
+Group=__APP__
 WorkingDirectory=__INSTALL_DIR__
 Environment="PATH=__INSTALL_DIR__/venv/bin"
 ExecStart=__INSTALL_DIR__/venv/bin/python __INSTALL_DIR__/app.py
 Restart=always
 RestartSec=10
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=append:/var/log/__APP__/__APP__.log
 
 [Install]
 WantedBy=multi-user.target
